# FrUCToSA

./: .gitlab-ci.yml  .hgignore  .hgtags  CHANGELOG.rst  README.rst  setup.cfg  setup.py
devel/: FrUCToSA-dev-py37.df  FrUCToSA-dev.df  migrate_from_QULo.py  restore_migrate_backups.py  template.py
doc/: roadmap.rst
docs/: CHANGELOG.rst  README.rst  index.rst  roadmap.rst
docs/development/: OpenRC.rst  architecture.rst  ft.rst  index.rst  roadmap.rst
docs/usage/: sensors.rst
examples/fructosa/: fructosad.conf
fructosa/: conf.py  constants.py  fructosad.py  heartbeat.py  lagent.py  lmaster.py  lmessage.py  sensors.py  slurm.py
fructosa/grafana/: dashboard.py  node.py
fructosa/ui/: cl.py
requirements/: devel.text  production.text
tests/common/: program.py
tests/functional/: base_start_stop.py  environment.py  test_grafana_dashboard.py  test_graphite.py  test_lagent.py  test_lmaster.py  test_slurm.py  utils.py
tests/functional/data/: lagent-graphite.1.conf  lagent-graphite.docker.1.conf  lagent-slurm.docker.1.conf  lagent-test.0.docker.conf  lagent-test.4.conf  lagent-test.8.conf  lmaster-redis.docker.0.conf
tests/unit/fructosa/: test_conf.py  test_heartbeat.py  test_lagent.py  test_lmaster.py  test_lmessage.py  test_sensors.py  test_slurm.py
tests/unit/fructosa/grafana/: test_dashboard.py
tests/unit/fructosa/ui/: test_cl.py
