# This works (DPalao, 6mar20):
# [options.data_files]
# /etc/fructosa =
#     examples/etc/fructosa/lagent.conf
#     examples/etc/fructosa/lmaster.conf
# /etc/conf.d/fructosa = examples/etc/conf.d/fructosa
# /etc/init.d/fructosa = examples/etc/init.d/fructosa

################################################################
# The next one, I don't know how it works:
#data = devel/in-progress-icon-2.jpg
# ...it seems to work with python setup.py sdist bdist_wheel
# ...but not with pip install dist/...
#                                 (DPalao, 6mar20)
################################################################
