# This works (DPalao, 6mar20):
# [options.data_files]
# /etc/fructosa =
#     examples/etc/fructosa/lagent.conf
#     examples/etc/fructosa/lmaster.conf
# /etc/conf.d/fructosa = examples/etc/conf.d/fructosa
# /etc/init.d/fructosa = examples/etc/init.d/fructosa

################################################################
# The next one, I don't know how it works:
#data = devel/in-progress-icon-2.jpg
# ...it seems to work with python setup.py sdist bdist_wheel
# ...but not with pip install dist/...
#                                 (DPalao, 6mar20)
################################################################

[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:fructosa/version.py]
search = version = '{current_version}'
replace = version = '{new_version}'

[bdist_wheel]
universal = 1

